--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>DBHub.io</title>
+    <title>Test web pages</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
         <h1>DBHub.io</h1>
-        <h2>SQLite database storage "in the cloud" 😀</h2>
-        <a href="https://github.com/sqlitebrowser/dbhub.io" class="button"><small>View project on</small> GitHub</a>
+        <h2>TEST TEST TEST TEST TEST 😀</h2>
       </div>
     </header>
 
